Add admin panel with role system and loading skeletons
Backend: Role enum (USER/ADMIN), role field on User entity, admin-only
endpoints for managing letters and users (GET/DELETE), role-based auth
via JwtAuthenticationFilter with Spring Security authorities, admin seed
user in data.sql.

Frontend: Admin page with tabs for letters (expandable, deletable) and
users (deletable non-admins), admin store, role in AuthUser interface,
Admin link in Navbar for admins only. Reusable Skeleton component with
loading states for inbox, profile, and home page buttons.